Added a footer to the blog page. Added styles to links when in dark-mode. Added a way to access objects in local storage on the blog page using javascript. Object are undefined, still needs fixing.

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -2,6 +2,13 @@ body{
     background-color: antiquewhite;
 }
 .dark-mode{
-    background-color: midnightblue;
+    background-color: rgb(30, 30, 136);
     color: antiquewhite;
+}
+.dark-mode a{
+    color:antiquewhite
+}
+footer{
+    display: flex;
+    justify-content: space-around;
 }
