--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,4 +4,11 @@
     box-sizing: border-box;
     font-size: 100%;
 }
+.dark-mode{
+    background-color: rgb(30, 30, 136);
+    color: antiquewhite;
+}
+.dark-mode a{
+    color:antiquewhite
+}
 
